--- a/app/views/tag_types/index.html.erb
+++ b/app/views/tag_types/index.html.erb
@@ -1,6 +1,6 @@
 <p class="notice"><%= flash[:notice] %></p>
 <p class="error"><%= flash[:error] %></p>
-<h1>Tag Categories</h1>
+<h1>Tag Types</h1>
 
   <%= render :partial => 'activities/sub_menu', :locals => { :tag_types => @tag_types } -%>
 
@@ -15,7 +15,7 @@
 <hr/>
 <p>
 	<% form_for :tag_type, @tag_type, :url => {:action => "create"} do |f| -%>
-		New category: <%= f.text_field :name %>
+		New tag type: <%= f.text_field :name %>
 		<%= submit_tag "Create" %>
 	<% end -%>
 </p>
