moved summary to day/hours view, and removed view for day/project/hours

--- a/app/views/month/week.html.erb
+++ b/app/views/month/week.html.erb
@@ -13,7 +13,7 @@
   <hr/>
    <% last_in_month = (@day >> 1) -1 %>
 
-  <h2>Week view</h2>
+  <br/>
   <table>
     <tr><th></th>
       <% @day.beginning_of_week.upto last_in_month.end_of_week  do |d| %>
@@ -25,4 +25,10 @@
       </tr>
     </table>
 
-  <!--%=# render :partial => 'summary',:locals => { :activities_summary => @activities_summary } -%-->
+  <br/><br/><br/>
+    <table>
+        <%  @activities_summary.each do |entry| %>
+        <tr><td><%= entry[:name] -%></td><td><%=  entry[:hours] -%></td></tr>
+        <% end %>
+        <tr><td>Total:</td><td> <%= @activities_summary.collect { |i| i[:hours] }.sum  -%></td></tr>
+  </table>
