Refactored time entries model/view/controller to use create action instead of new when adding an activity to current week

--- a/app/views/time_entries/edit.html.erb
+++ b/app/views/time_entries/edit.html.erb
@@ -29,7 +29,7 @@
 			<% end -%>
 		</table>
 		<p>
-			<%= submit_tag "Submit" %>
+			<%= submit_tag "Update" %>
 		</p>
 	<% end -%>
 	<%= link_to "Back", { :controller => "time_entries", :action => "index", :date => @date } %>
