Fixed routing related bug that preventet time entries from being deleted via the Remove link

--- a/app/views/time_entries/index.html.erb
+++ b/app/views/time_entries/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Entries for week <%= @date.cweek %></h1>
 <p class="notice"><%= flash[:notice] %></p>
 <p>
-	<%= link_to "Previous week", time_entries_url(:date => @date.beginning_of_week.-(7)) %>
-	<%= link_to "Next week", time_entries_url(:date => @date.beginning_of_week.+(7)) %>
+	<%= link_to "Previous week", time_entries_path(:date => @date.beginning_of_week.-(7)) %>
+	<%= link_to "Next week", time_entries_path(:date => @date.beginning_of_week.+(7)) %>
 </p>
 <% if not @activities.empty? %>
 <table class="week_entries">
@@ -23,7 +23,7 @@
 	<% time_entries = select_by_activity(@time_entries, activity) %>
 	<tr> 
 		<td class="week_entries_activity">
-			<%= link_to truncate(activity.name, :length => 20), edit_multiple_time_entries_url(:ids => ids_from(time_entries), :date => @date), :method => :post %>
+			<%= link_to truncate(activity.name, :length => 20), edit_multiple_time_entries_path(:ids => ids_from(time_entries), :date => @date), :method => :post %>
 		</td>
 		<td class="week_entries_hours"><%= time_entries[0].hours %></td>
 		<td class="week_entries_hours"><%= time_entries[1].hours %></td>
@@ -33,7 +33,7 @@
 		<td class="week_entries_hours"><%= time_entries[5].hours %></td>
 		<td class="week_entries_hours"><%= time_entries[6].hours %></td>
 		<td>
-		<%= link_to "Remove", destroy_multiple_time_entries_url(:ids => ids_from(time_entries), :date => @date), :method => :delete %>
+		<%= link_to "Remove", destroy_multiple_time_entries_path(:ids => ids_from(time_entries), :date => @date), :method => :post %>
 		</td>
 	</tr>
 <% end -%>
@@ -49,7 +49,7 @@
 <% end %>
 <p> 
 	<% unless @activity_options.empty? -%> 
-		<% form_tag create_multiple_time_entries_url do -%>
+		<% form_tag create_multiple_time_entries_path do -%>
 			<%= hidden_field_tag "date", @date %>
 			<%= select "activity", "activity_id", @activity_options %>
 			<%= submit_tag "Add selected activity to this week" %>
