--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -9,6 +9,19 @@ table {
         text-align: left;
 }
 
+.activities_header {
+background:#EEEEFF none repeat scroll 0 0;
+padding-top:5px;
+}
+
+.activities_status_icons{
+    padding-left: 20px;
+}
+.activities_action_icons{
+    float:right;
+    padding-right: 20px;
+}
+
 ul.reports{
 		list-style: none;
 		font-size: 18px;
