added icon for editing activities

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -37,14 +37,16 @@
   
   <div>
     <div class="activities_header">
-    <span class="activities_action_icons">
-        <%= link_to image_tag("delete.png", :title => "Delete"), activity_path(a), :method => :delete %>
-    </span>
-    <%= link_to a.name, edit_activity_path(a) %>
-    <span class="activities_status_icons">
-        <%= if a.default_activity then image_tag("flag_blue.png", :title => "Default activity", :alt => "default") end %>
-        <%= unless a.active then image_tag("control_pause.png", :title => "Inactive", :alt => "Inactive") end %>
-    </span>
+      <span class="activities_action_icons">
+          <%= link_to image_tag("pencil.png", :title => "Edit"), edit_activity_path(a) %>
+          <%= link_to image_tag("delete.png", :title => "Delete"), activity_path(a), :method => :delete, :confirm => 'Really remove category?' %>
+      </span>
+      <b><%= link_to a.name, edit_activity_path(a) %></b>
+
+      <span class="activities_status_icons">
+          <%= if a.default_activity then image_tag("flag_blue.png", :title => "Default activity", :alt => "default") end %>
+          <%= unless a.active then image_tag("control_pause.png", :title => "Inactive", :alt => "Inactive") end %>
+      </span>
     </div>
 
     <%= a.description %><br/>
