--- a/app/views/activities/_sub_menu.html.erb
+++ b/app/views/activities/_sub_menu.html.erb
@@ -2,7 +2,7 @@
 <ul id="nav">
       <li class="menu"><%= link_to "Activities", activities_url %>
       </li>
-      <li class="menu"><%= link_to "Manage Tags", tags_url %>
+      <li class="menu"><%= link_to "Tags", tags_url %>
         <ul>
           <% TagType.all.each do |type| %>
             <li class="sub"><%= link_to type.name, :controller => 'tags', :action => 'index', :tag_type => type.id %></li>
