--- a/app/views/tag_types/index.html.erb
+++ b/app/views/tag_types/index.html.erb
@@ -2,21 +2,25 @@
 <p class="error"><%= flash[:error] %></p>
 <h1>Tag Types</h1>
 
-  <%= render :partial => 'activities/sub_menu', :locals => { :tag_types => @tag_types } -%>
+<%= render :partial => 'activities/sub_menu', :locals => { :tag_types => @tag_types } -%>
+
 
 <table>
-	<% @tag_types.each do |c| -%>
-		<tr>
-                  <td><%= c.name %></td>
-                  <td><%= link_to image_tag("pencil.png", :title => "Edit"), :action => "edit", :id => c %>
-                      <%= link_to image_tag("delete.png", :title => "Delete"), tag_type_path(c), :method => :delete, :confirm => 'Really remove category?' %></td>
-		</tr>
-	<% end -%>
+  <% @tag_types.each do |c| -%>
+  <tr>
+    <td> <%= c.name %></td>
+    <td>
+      <%= link_to image_tag("pencil.png", :title => "Edit"), :action => "edit", :id => c %>
+      <%= link_to image_tag("delete.png", :title => "Delete"), tag_type_path(c), :method => :delete, :confirm => 'Really remove category?' %>
+    </td>
+</tr>
+  <% end -%>
 </table>
+
 <hr/>
 <p>
-	<% form_for :tag_type, @tag_type, :url => {:action => "create"} do |f| -%>
-		New tag type: <%= f.text_field :name %>
-		<%= submit_tag "Create" %>
-	<% end -%>
+  <% form_for :tag_type, @tag_type, :url => {:action => "create"} do |f| -%>
+                  New tag type: <%= f.text_field :name %>
+    <%= submit_tag "Create" %>
+  <% end -%>
 </p>
