--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -8,7 +8,8 @@
   <% @tags.each do |tag| -%>
     <tr>
       <td><%= tag.tag_type_name %> - <%= link_to tag.name, :action => 'edit', :id => tag %></td>
-      <td><%= link_to 'Destroy', tag_path(tag), :method => :delete, :tag_type => params[:tag_type] %></td>
+      <td><%= link_to image_tag("pencil.png", :title => "Edit"), :action => "edit", :id => tag %>
+          <%= link_to image_tag("delete.png", :title => "Delete"), tag_path(tag), :method => :delete, :tag_type => params[:tag_type] %></td>
     </tr>
   <% end -%>
 </table>
