--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,5 +8,16 @@
   <%=h @user.login %>
 </p>
 
+<p>
+  <b>Email</b>
+  <%= @user.email %>
+</p>
+
+<p>
+  <b>Operative status</b>
+  <%= @user.operative_status %>
+</p>
+
+
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
