--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,7 +19,7 @@
     <td>
       <%= link_to image_tag("magnifier.png", :title => "Show"), user_path(user) %>
       <%= link_to image_tag("pencil.png", :title => "Edit"), :action => "edit", :id => user %>
-      <%= link_to image_tag("delete.png", :title => "Delete"), user_path(user), :method => :delete, :confirm => 'Really remove category?' %>
+      <%= link_to image_tag("delete.png", :title => "Delete"), user_path(user), :method => :delete, :confirm => 'Really remove user?' %>
     </td>
   </tr>
 <% end %>
