--- a/app/views/month/listing.html.erb
+++ b/app/views/month/listing.html.erb
@@ -3,17 +3,23 @@
 
 <%= render :partial => 'select_view' -%>
 
-<% form_tag :action => 'listing', :method => 'get' do %>
+<% form_tag 'listing', :method => 'get', :id => 'listing_form' do %>
   <%= render :partial => 'reports/date_picker', :locals =>
     { :years => @years, :months => @months, :selected_year => @selected_year, :selected_month => @selected_month } -%>
-  <%= submit_tag 'View' %>
+ 
+  <noscript><%= submit_tag 'View' %></noscript>
 <% end %>
+
+    <%= observe_form 'listing_form',
+      :url => {:action => 'update_listing'},
+      :update => 'listing_content'
+       %>
 
   <hr/>
 
+<div id="listing_content">
+  <%= render :partial => 'listing_content', :locals => { :table => @table, :params => params } -%>
+</div>
 
-<%= render_table @table -%>
-
-<%= render :partial => 'reports/download', :locals => { :params => params } -%>
-
-
+<%#= render_table @table -%>
+<%#= render :partial => 'reports/download', :locals => { :params => params } -%>
