--- a/app/views/tag_types/index.html.erb
+++ b/app/views/tag_types/index.html.erb
@@ -1,6 +1,6 @@
 <p class="notice"><%= flash[:notice] %></p>
 <p class="error"><%= flash[:error] %></p>
-<h1>Tag Types</h1>
+<h1>Categories</h1>
 
 <%= render :partial => 'activities/sub_menu', :locals => { :tag_types => @tag_types } -%>
 
